--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -121,9 +121,7 @@ button.add {
   font-family: 'S-CoreDream-4Regular';
 }
 
-#header .left button,
-#header .right button {
-}
+
 
 #header .ruffys_item {
   width: 100%;
@@ -168,6 +166,13 @@ button.add {
 #footer .button button {
   flex: 0 0 1.8rem;
   display: inline-block;
+}
+
+#header .left button,
+#header .right button,
+#footer .button {
+  width:1.8rem;
+  height:1.8rem;
 }
 
 #main_body {
