--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -81,7 +81,7 @@ button.add {
   display: flex;
   flex-direction: column;
   width: 100%;
-  padding: 0.5rem 1rem 0 1rem;
+  padding: 0.5rem 1rem 0.5rem 1rem;
   box-sizing: border-box;
   border-bottom: 1px solid #e6e6e6;
 }
