--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -92,13 +92,11 @@ button.add {
   display: flex;
   align-items: center;
   width: 100%;
-  height: 3.4rem;
 }
 
 #header .left,
 #header .right {
   position: absolute;
-  top: 1.3rem;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -115,13 +113,12 @@ button.add {
 #header .title {
   flex: 1;
   text-align: center;
-  padding: 0 2.2rem;
+  padding: 0;
 }
 
 #header .title h1 {
   margin: 0;
   font-size: 1.8rem;
-  line-height: 3.4rem;
 }
 
 #header .title p {
