--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -85,6 +85,7 @@ button.add {
   padding: 0.5rem 1rem 0.5rem 1rem;
   box-sizing: border-box;
   border-bottom: 1px solid #e6e6e6;
+  background-color:yellow;
 }
 
 #header .h1 {
@@ -92,6 +93,7 @@ button.add {
   display: flex;
   align-items: center;
   width: 100%;
+  background-color:green;
 }
 
 #header .left,
@@ -100,6 +102,7 @@ button.add {
   display: flex;
   align-items: center;
   justify-content: center;
+  background-color:red;
 }
 
 #header .left {
