--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -125,6 +125,9 @@ button.add {
 #header .title h1 {
   margin: 0;
   font-size: 1.8rem;
+  line-height:3.4rem;
+  display:inline-block;
+  background-color:purple;
 }
 
 #header .title p {
