--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -266,12 +266,13 @@ button.control {
   transition: opacity .36s cubic-bezier(.22,.61,.36,1);
 }
 
-#main_body .lnb {
+.lnb {
   padding:2rem;
   text-align:left;
   background-color:red;
 }
-#main_body .lnb .lnb_header a {
+
+.lnb .lnb_header a {
   width:1.8rem;
   height:1.8rem;
   display:inline-block;
