--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -266,8 +266,9 @@ button.control {
   transition: opacity .36s cubic-bezier(.22,.61,.36,1);
 }
 
+/*
 .lnb {
-  padding:2rem;
+  padding:1rem;
   text-align:left;
   background-color:red;
 }
@@ -278,7 +279,8 @@ button.control {
   display:inline-block;
   border:1px solid red;
   background: url('../images/ico_prev.png') no-repeat 0 0/100%;
-}
+}*/
+
 
 .lnb .lnb_header a.close span {
   display:none
