--- a/src/assets/css/popup.css
+++ b/src/assets/css/popup.css
@@ -31,8 +31,7 @@ body.no-scroll {
 }
 
 .com_popup_wrap .popup_inner {
-  width: 90%;
-  max-width: 20rem;
+  width: min(92vw, 32rem);
 	position:relative;
   background: #fff;
   padding: 2rem!important;
