--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -137,6 +137,7 @@
   flex: 1;
   display: flex;
   flex-direction: column;
+  overflow:hidden;
 }
 
 .main_fixed {
@@ -149,7 +150,7 @@
   -webkit-overflow-scrolling: touch;
   padding-bottom: var(--footer-h, 8rem);
   min-height:100%;
-  background-color:red;
+  background-color:pink
 }
 
 button.lnb {
