--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -149,8 +149,8 @@
   overflow-y: auto;
   -webkit-overflow-scrolling: touch;
   padding-bottom: var(--footer-h, 8rem);
-  min-height:100%;
-  background-color:pink
+  min-height: calc(var(--vh, 1vh) * 100);
+  background-color:yellow;
 }
 
 button.lnb {
