--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -4,7 +4,6 @@
   flex-direction: column;
   position: relative;
   overflow-x: hidden;
-  min-height: 0;
 }
 
 [v-cloak] {
@@ -135,13 +134,14 @@
 
 #main_body {
   flex-grow: 1;
+  overflow-y: auto;
+  -webkit-overflow-scrolling: touch;
   padding: 0.5rem 1.5rem 0.5rem 1.5rem;
   background-color: #fafafa;
   flex: 1;
   display: flex;
   flex-direction: column;
-  overflow: hidden;
-  min-height: 0;
+  overflow:hidden;
 }
 
 .main_fixed {
@@ -149,13 +149,10 @@
 }
 
 .main_scroll {
-  flex: 1 1 auto;
-  min-height: 0;
+  flex: 1;
   overflow-y: auto;
   -webkit-overflow-scrolling: touch;
-  overscroll-behavior: contain;
   padding-bottom: var(--footer-h, 8rem);
-  transform: translateZ(0);
 }
 
 button.lnb {
@@ -273,6 +270,7 @@ button.control {
   transition: opacity .36s cubic-bezier(.22,.61,.36,1);
 }
 
+
 .lnb {
   padding:1rem;
   text-align:left;
@@ -284,6 +282,7 @@ button.control {
   display:inline-block;
   background: url('../images/ico_prev.png') no-repeat 0 0/100%;
 }
+
 
 .lnb .lnb_header a.close span {
   display:none
