--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -154,6 +154,8 @@
   overflow-y: auto;
   -webkit-overflow-scrolling: touch;
   padding-bottom: var(--footer-h, 8rem);
+  overscroll-behavior: contain;
+  touch-action: pan-y !important;
 }
 
 button.lnb {
