--- a/src/assets/css/ar_popup.css
+++ b/src/assets/css/ar_popup.css
@@ -82,12 +82,7 @@
 
 .popup_wrap .popup_btm {
 	width:100%;
-	padding:1.5rem 2rem 1.5rem 2rem;
-  /*
-	position:fixed;
-	bottom:0;
-	left:0;
-	z-index:888;*/
+	padding:1rem 0 2rem 0 
 }
 
 .popup_wrap .popup_btm button {
