--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -141,8 +141,7 @@
   flex: 1;
   display: flex;
   flex-direction: column;
-  /*overflow:hidden;*/
-  touch-action: pan-y !important;
+  overflow:hidden;
 }
 
 .main_fixed {
@@ -152,7 +151,7 @@
 .main_scroll {
   flex: 1;
   overflow-y: auto;
-  -webkit-overflow-scrolling: touch;
+  -webkit-overflow-scrolling: touch!important;
   padding-bottom: var(--footer-h, 8rem);
   overscroll-behavior: contain;
   touch-action: pan-y !important;
