--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -159,6 +159,12 @@
   margin-top: -1px;
 }
 
+.main_scroll::after { 
+  content:""; 
+  display:block; 
+  height: 120px; 
+}
+
 button.lnb {
   background: url('../images/ico_lnb.png') no-repeat 0 0/100%;
 }
