--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -21,28 +21,28 @@
 
 @font-face {
    font-family: 'S-CoreDream-3Light';
-   src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_six@1.2/S-CoreDream-3Light.woff') format('woff');
+   src: url('../fonts/SCDream3.woff') format('woff');
    font-weight: normal;
    font-style: normal;
 }
 
 @font-face {
    font-family: 'S-CoreDream-4Regular';
-   src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_six@1.2/S-CoreDream-4Regular.woff') format('woff');
+   src: url('../fonts/SCDream4.woff') format('woff');
    font-weight: 400;
    font-style: normal;
 }
 
 @font-face {
    font-family: 'S-CoreDream-5Regular';
-   src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_six@1.2/S-CoreDream-5Regular.woff') format('woff');
+   src: url('../fonts/SCDream5.woff') format('woff');
    font-weight: 500;
    font-style: normal;
 }
 
 @font-face {
    font-family: 'S-CoreDream-6Bold';
-   src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_six@1.2/S-CoreDream-6Bold.woff') format('woff');
+   src: url('../fonts/SCDream6.woff') format('woff');
    font-weight: 600;
    font-style: normal;
 }
@@ -132,7 +132,7 @@ h2 {
 }
 
 h3 {
-  font-family: 'S-CoreDream-5Regular';
+  font-family: 'S-CoreDream-4Regular';
 }
 
 img, picture, video, canvas, svg {
