--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -151,17 +151,16 @@
   flex: 1;
   overflow-y: auto;
   -webkit-overflow-scrolling: touch!important;
-  padding-bottom: var(--footer-h, 8rem);
   touch-action: pan-y !important;
-  padding-top: 1px;
-  margin-top: -1px;
 }
 
-.main_scroll::after { 
-  content:""; 
-  display:block; 
-  height: 9rem; 
+@supports (-webkit-touch-callout: none) {
+  .main_scroll{
+    padding-top: 0.5rem;   
+    margin-top: -0.5rem;   
+  }
 }
+
 
 button.lnb {
   background: url('../images/ico_lnb.png') no-repeat 0 0/100%;
@@ -297,6 +296,9 @@ button.control {
 }
 
 #main_body .no_data {
+  position: fixed;
+  top: 50%;
+  left: 50%;
   transform: translate(-50%, -50%);
   text-align: center;
   font-size: 1.4rem;
