--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -152,12 +152,14 @@
   overflow-y: auto;
   -webkit-overflow-scrolling: touch!important;
   touch-action: pan-y !important;
+  padding-top: 0.5rem;   
+  margin-top: -0,5rem;   
 }
 
 @supports (-webkit-touch-callout: none) {
   .main_scroll{
     padding-top: 0.5rem;   
-    margin-top: -0.5rem;   
+    margin-top: -0,5rem;   
   }
 }
 
