--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -68,6 +68,8 @@ body,
   -webkit-tap-highlight-color: transparent;
   text-align: center;
   overscroll-behavior: none;
+  overflow: hidden;
+  touch-action: none;
 }
 
 @media (max-width: 375px) {
