--- a/src/assets/css/ar_popup.css
+++ b/src/assets/css/ar_popup.css
@@ -14,12 +14,12 @@
 }
 
 .close_btn_wrap {
-	width:100%;
 	position:fixed;
-	top:0;
-	left:0;
-	text-align:right;
-	padding:0.8rem 0.8rem 0 0
+  top:var(--sat);
+  left:var(--sal);
+  right:var(--sar);
+  text-align:right;
+  padding:0.8rem 0.8rem 0 0;
 }
 
 
@@ -37,15 +37,15 @@
 
 
 .popup_wrap {
-	width:100%;
-	height:100%;
 	position:fixed;
-	top:0;
-	left:0;
-	padding:0 1.5rem 0 1.5rem;
-	overflow-y:auto;
-	z-index:888;
+  top:var(--sat); right:var(--sar); bottom:var(--sab); left:var(--sal);
+  width:auto; height:auto;
+  padding:0 1.5rem;     
+  overflow-y:auto;
+  z-index:888;
+  background:#fafafa; 
 }
+
 
 .popup_wrap .popup_tit {
   width:100%;
