--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -76,17 +76,24 @@ body,
   :root, html { font-size: 0.79em; }
 }
 
-:root { --app-dvh: 100dvh; }
-
-.app-root{
-  min-height: var(--app-dvh);
-  box-sizing: border-box;              
-  background:#fff;
-  padding-top: env(safe-area-inset-top, 0px);
-  padding-bottom: env(safe-area-inset-bottom, 0px);
-  padding-left: env(safe-area-inset-left, 0px);
-  padding-right: env(safe-area-inset-right, 0px);
+:root { 
+  --app-dvh: 100dvh; 
+  --sat: env(safe-area-inset-top);
+  --sar: env(safe-area-inset-right);
+  --sab: env(safe-area-inset-bottom);
+  --sal: env(safe-area-inset-left);
 }
+
+.app-root,
+.lnb {
+  height: calc(100dvh - var(--sat) - var(--sab));
+  padding: var(--sat) var(--sar) var(--sab) var(--sal);
+  box-sizing: border-box;
+  background:#fff;
+}
+
+.header{ top: var(--sat); }
+.footer{ bottom: var(--sab); }
 
 .no-touch {
   width: 100vw;
