--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -70,6 +70,7 @@ body,
   overscroll-behavior: none;
   overflow: hidden;
   touch-action: none;
+  background-color:#f9f9f9;
 }
 
 @media (max-width: 375px) {
