--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -19,7 +19,7 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  padding: 0.5rem 1rem 0.5rem 1rem;
+  height:5rem;
   box-sizing: border-box;
 }
 
@@ -33,11 +33,13 @@
 
 
 #header .left {
+  left:1rem;
   background-color:red;
   display: flex;
 }
 
 #header .right {
+  right:1rem;
   background-color:blue;
 }
 
