--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -20,7 +20,9 @@
   flex-direction: column;
   width: 100%;
   height:5rem;
+  padding-top:0.5rem;
   box-sizing: border-box;
+  background-color:Red;
 }
 
 #header .left,
@@ -73,9 +75,9 @@
 }
 
 #header .right button {
-  width: 2rem;
-  height: 2rem;
-  margin-left:1rem;
+  width: 1.8rem;
+  height: 1.8rem;
+  margin-left:0.8rem;
   display: inline-block;
 }
 
