--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -43,12 +43,25 @@
 }
 
 #header .left .ruffys {
-  width:3.5rem;
-  height:3.5rem;
-  background-color:#ffef6e;
-  border-radius:1rem;
+  width: 3.5rem;
+  height: 3.5rem;
+  background-color: #ffef6e;
+  border-radius: 1rem;
   flex-shrink: 0;
-  margin-right:1rem;
+  margin-right: 1rem;
+  position: relative;
+}
+
+#header .left .ruffys::after {
+  content: "";
+  position: absolute;
+  bottom: -0.6rem;
+  right: 0.8rem;
+  width: 0;
+  height: 0;
+  border-left: 0.6rem solid transparent;
+  border-right: 0.6rem solid transparent;
+  border-top: 0.6rem solid #ffef6e;
 }
 
 #header .left .title {
@@ -58,15 +71,15 @@
 
 #header .left .title h1 {
   margin: 0;
-  line-height:2.6rem;
-  font-size: 1.6rem;
+  line-height:2.4rem;
+  font-size: 1.4rem;
   display: inline-block;
   color:#333;
 }
 
 #header .left .title p {
   margin: 0;
-  font-size: 0.9rem;
+  font-size: 0.8rem;
   letter-spacing: -0.02rem;
   display: flex;
   align-items: center;
@@ -75,15 +88,15 @@
 }
 
 #header .right button {
-  width: 1.8rem;
-  height: 1.8rem;
-  margin-left:0.8rem;
+  width: 1.6rem;
+  height: 1.6rem;
+  margin-left:0.6rem;
   display: inline-block;
 }
 
 #header .right button:last-child {
-  width: 1.6rem;
-  height: 1.6rem;
+  width: 1.4rem;
+  height: 1.4rem;
 }
 
 /*
